# pascalJIT

./: CMakeLists.txt  acceptance_test.py  main.cpp  readme.md
.github/workflows/: ci.yml
doc/: crossPlatformCompile.md  debugJIT.md  windows_qemu.md
src/: AST.hpp  Assembly.hpp  JIT.hpp  Parser.hpp  Runtime.hpp  Token.hpp
tests/: CMakeLists.txt  e2e.cpp
tests/acceptance/: binaryExpression.pas  helloworld.pas  printVariable.pas  return.pas
tests/cases/: binaryExpression.pas  fib.pas  helloworld.pas  if.pas  left_recursive.pas  printVariable.pas  variable_assign.pas
